# SQL-with-cpp

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  main.dox
include/crud-wrapper/: Common.hpp  CrudWrapper.hpp  ICruddable.hpp
scripts/: build.sh  run-tests.sh
test/: CMakeLists.txt  CrudWrapper_test.cpp  main.cpp
